--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <source src="KOTA PEKANBARU DRONE VIEW AGUSTUS 2022.mp4" type="video/mp4">
         </video>
         <div class="navbar">
-            <img class="logo" img src="logo/logoitpln.jpg" alt="logo itpln" height="200">
+            <img class="logo" img src="logoitpln.jpg" alt="logo itpln" height="200">
             <ul>
                 <li><a href="deskripsi.html">Deskripsi</a></li>
                 <li><a href="profile.html">Owner 1</a></li>
