--- a/lanjutanportofolio.html
+++ b/lanjutanportofolio.html
@@ -14,7 +14,7 @@
             <source src="youtube_Hgg7M3kSqyE_640x360_h264.mp4" type="video/mp4">
         </video>
         <div class="navbar">
-            <img class="logo" img src="logo/logoitpln.jpg" alt="logo itpln" height="200">
+            <img class="logo" img src="logoitpln.jpg" alt="logo itpln" height="200">
             <div class="welcome-container">
                 <h1>Terimakasih Telah Mendaftar !</h1>
                 <p>Kami sangat senang menyambut Anda sebagai bagian dari keluarga besar kami.</p>
